--- a/floor-plan/src/app/home/page.module.css
+++ b/floor-plan/src/app/home/page.module.css
@@ -13,7 +13,49 @@
   object-fit:cover;
   border: 1px solid #ddd;
   border-radius: 4px;
+  margin-top: 8px;
 }
+
+.fileInfo {
+  text-align:left;
+  margin-top: 10px; /* Adjust margin as needed */
+}
+
+.fileName {
+  font-weight: bold;
+  font-size: 16px; /* Adjust size as needed */
+}
+
+.creatorInfo {
+  font-size: 12px;
+  color: #666; /* Light grey color */
+}
+
+.fileOptions {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 8px;
+}
+
+.starButton {
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 8px; /* Space between star and three-dot button */
+}
+
+.threeDotButton {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.threeDotLogo {
+  width: 24px;
+  height: 24px;
+}
+
 
 /* The sidebar styles */
 .sidebar {
