--- a/floor-plan/src/app/home/page.module.css
+++ b/floor-plan/src/app/home/page.module.css
@@ -8,9 +8,9 @@
 }
 
 .thumbnail {
-  width: 100px;
+  width: 100%;
   height: auto;
-  object-fit:cover;
+  object-fit: cover;
   border: 1px solid #ddd;
   border-radius: 4px;
   margin-top: 8px;
@@ -23,13 +23,17 @@
 }
 
 .fileName {
+  align-self: flex-start;
   font-weight: bold;
-  font-size: 16px; /* Adjust size as needed */
+  font-size: 16px;
+  margin-bottom: 10px;
 }
 
 .creatorInfo {
+  align-self: flex-start;
   font-size: 12px;
-  color: #666; /* Light grey color */
+  color: #666;
+  margin-top: 5px;
 }
 
 .fileOptions {
@@ -91,16 +95,20 @@
 }
 
 .threeDotButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
   background: none;
   border: none;
   cursor: pointer;
+  padding: 5px;
 }
 
 .threeDotLogo {
   width: 24px;
   height: 24px;
-  margin-left: 40px;
 }
+
 
 .floorPlanLogo {
   width: 24px;
