--- a/floor-plan/src/app/login/login.module.css
+++ b/floor-plan/src/app/login/login.module.css
@@ -1,8 +1,13 @@
-html,
-body {
+.loginWrapper {
+	height: 100vh;
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background: radial-gradient(circle, #1E75BB 0%, #00457C 100%);
 }
 
 .main {
@@ -25,18 +30,6 @@ body {
 
 .lutronLogo {
 	margin-bottom: 20px;
-}
-
-h3 {
-	font-size: 24px;
-	font-weight: 600;
-	margin-bottom: 10px;
-}
-
-p {
-	font-size: 14px;
-	color: #6c6c6c;
-	margin-bottom: 30px;
 }
 
 .button {
