--- a/floor-plan/src/app/home/page.module.css
+++ b/floor-plan/src/app/home/page.module.css
@@ -58,6 +58,15 @@
   /* Spacing at the top inside the sidebar */
 }
 
+.sidebar h4 {
+  text-align: center; 
+  font-size: 1.5rem; 
+  margin-top: 1rem; 
+  margin-bottom: 1rem; 
+  font-weight: bold; 
+  color: #1E75BB; 
+}
+
 .navItem {
 
   display: flex;
